# ine-challenge

./: .env.dev  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  run.sh
challenge/: constants.py  pytest.ini  settings.py  urls.py
challenge/challenge/: constants.py  settings.py  urls.py
challenge/users/: __init__.py  clients.py  constants.py  models.py  permissions.py  serializers.py
challenge/users/migrations/: 0001_initial.py
challenge/users/tests/: test_serializers.py
challenge/users/urls/v1/: urls.py
challenge/users/views/v1/: views.py
users/: __init__.py  clients.py  constants.py  exceptions.py  models.py  serializers.py
users/management/commands/: createstaffuser.py
users/migrations/: 0001_initial.py
users/tests/: test_clients.py  test_serializers.py  test_views.py
users/urls/v1/: urls.py
users/views/v1/: views.py
